# DSO

./: CMakeLists.txt  README.md
dso_ros/: CMakeLists.txt  README.md
dso_ros/src/: main.cpp
setting/: camera.txt
src/: dso_dataset  main_dso_pangolin.cpp  result.txt
src/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h
src/logs/: calibLog.txt  coarseTrackingLog.txt  diagonal.txt  eigenALog.txt  eigenAllLog.txt  eigenPLog.txt  lifetimeLog.txt  nullspacesLog.txt  numsLog.txt  time.txt  variancesLog.txt
